src/components/CaseEditor.scss
@import "../UniversalStyles";
.addCaseForm {
  padding: 3em;
}

.addCaseForm h4 {
  font-weight: 400;
  padding-top: 1em;
}

.choice {
  padding-bottom: 0.5em;
}

.form-section {
  border-bottom:1px solid #ccc;
  &.quick {
    border: none;
  }
}

.field-case {
  padding-bottom: 2rem;
  padding-top: 1rem;
  &.top {
    padding-top: 0;
  }
  // &.select {
  //   padding-bottom: 1rem;
  // }
  // &.related, &.media {
  //   padding-bottom: 1.6rem;
  // }
  &.last {
    border: none;
  }
}

.choicelist {
  opacity: 1;
}

.case-html {
  p {
    text-align: left;
  }
}

.list.videos {
  margin-top: -7px;
}

.custom-textarea {
  border: 2px solid $black;
  padding-left: 1rem;
  padding-right: 1rem;
  min-height: 70px;
}

.custom-number-field {
  border: 2px solid $black;
  padding-left: 1rem;
  @include media-breakpoint-up(lg) {
    width: 70% !important;
  }
}

.custom-field {
  border: 2px solid $black;
  padding-left: 1rem;
  @include media-breakpoint-up(lg) {
    width: 70% !important;
  }
  >div {
    display: none;
  }
  &.org-title {
    font-size: 0.95rem !important;
  }
}

label {
  margin: 0 !important;
}

.related-fields {
  border: 2px solid $black;
  padding-left: 1rem;
  @include media-breakpoint-up(lg) {
    width: 70% !important;
  }
  padding-bottom: 0.5rem;
  display: block !important;
  // height: 44px;
  div {
    margin-bottom: 0 !important;
  }
  hr {
    display: none;
  }
}

.explanatory-text {
  margin-bottom: 0.5rem;
  font-weight: $blond-weight;
  span {
    font-weight: $blond-weight;
  }
  @include media-breakpoint-up(md) { 
    width: 70%;
  }
}

.custom-select {
  @include media-breakpoint-up(lg) {
    width: 70% !important;
  }
  border: 2px solid $black;
  padding-left: 1rem;
  hr {
    display: none;
  }
  &.Select--single {
    padding-left: 0;
    .Select-control {
      border: none !important;
      box-shadow: none !important;
    }
  }
}

.section-heading {
  padding-top: 3rem;
  &.hidden {
    display: none;
  }
}

.sub-heading {
  font-weight: $medium-weight;
  line-height: 40px;
  margin: 0;
  padding-bottom: 0.6rem;
  &.top {
    padding-top: 0;
    border: none;
  }
  &.org {
    font-size: 0.6rem;
  }
  &.hidden {
    display: none;
  }
}

#undefined-Selectanissue-* {
  color: blue !important;
}


.sub-sub-heading {
  font-weight: $medium-weight;
  color: $black;
  line-height: 18px;
  margin-bottom: 5px;
  padding-top:14px;
  display:inline-block;
  text-transform: capitalize;
}
.sub-sub-heading + div {
  display:inline;
  margin-left:5px;
}
.sub-sub-heading + div.tags {
  display: block;
}

.sub-sub-heading + div a {
  color:$black;
  font-size:16px;
  position:relative;
  &:hover {
    color:$interactive-color;
  }
}

.incomplete-warning {
  margin: 0 !important;
}


.case-location {
  .geosuggest__input-wrapper, .geosuggest__suggests {
    width: 100%;
  }
}

.main-area {
  .title-edit {
    @include media-breakpoint-up(sm) {
      padding-top: 2rem;
    }
    border: none;
  }
}

.itemPics {
  .box-container {
    padding-bottom: 1rem;
    @include media-breakpoint-only(sm) {
      margin-bottom: 2rem;
    }
  }
  .file {
    position: relative;
    padding: 0.5rem 3rem 0.5rem 0.5rem;
    border: 2px solid $dark-grey;
    margin-bottom: 0.5rem;
    .trash {
      position: absolute;
      cursor: pointer;
      width: 1.4rem;
      height: 1.4rem;
      bottom: 10px;
      right: 12px;
      background-image: url("../img/trash.png");
      background-repeat: no-repeat;
      background-size: 0.9rem;
      background-color: #fff;
      background-position: center;
      z-index: 1;
    }
  }
  .box {
    position: relative;
    overflow: hidden;
    height: 160px;
    border: 4px solid $dark-grey;
    .checkbox {
      position: absolute;
      width: 1.4rem;
      height: 1.4rem;
      right: 0;
      background: #fff;
      background-repeat: no-repeat;
      background-size: 1.4rem;
      background-image: url("../img/star-outline.png");
      cursor: pointer;
    }
    .trash {
      position: absolute;
      cursor: pointer;
      width: 1.4rem;
      height: 1.4rem;
      bottom: 1px;
      right:0;
      background-image: url("../img/trash.png");
      background-repeat: no-repeat;
      background-size: 0.9rem;
      background-color: #fff;
      background-position: center;
      z-index: 1;
    }
    small {
      background: #fff;
      position: absolute;
      left: 0;
      width: 100%;
      bottom: 0;
    }
    text-align: center;
    &.lead {
      border: 4px solid $interactive-color;
      .trash {
        bottom: 1px;
        border: none;
      }
      .checkbox {
        background-image: url("../img/star.png");
      }
    }
  }
}

